WIP GamesPage navigation

--- a/src/FantasyFootball.Maui/FantasyFootball.Maui.csproj
+++ b/src/FantasyFootball.Maui/FantasyFootball.Maui.csproj
@@ -113,4 +113,10 @@
     <ProjectReference Include="..\FantasyFootball\FantasyFootball.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Controls\GameViewRow.xaml.cs">
+      <DependentUpon>GameViewRow.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
 </Project>
