--- a/src/FantasyFootball/FantasyFootball.csproj
+++ b/src/FantasyFootball/FantasyFootball.csproj
@@ -33,6 +33,14 @@
     <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.0" />
     <PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.1.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Resources\AppResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>AppResources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
   
   <ItemGroup>
     <EmbeddedResource Update="Resources\AppResources.resx">
