--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,8 +16,8 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 6.0.x
+        dotnet-version: 8.0.x
     - name: Install MAUI workload
       run: dotnet workload install maui
     - name: Build
-      run: dotnet build src/FantasyFootball.Maui/FantasyFootball.Maui.csproj -f:net6.0-android
+      run: dotnet build src/FantasyFootball.UI/FantasyFootball.UI.csproj -f:net8.0-android
