--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,12 +12,18 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Setup .NET
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
     - name: Install MAUI workload
       run: dotnet workload install maui
     - name: Build
-      run: dotnet build src/FantasyFootball.UI/FantasyFootball.UI.csproj -f:net8.0-android
+      run: dotnet build src/FantasyFootball.UI/FantasyFootball.UI.csproj -f:net8.0-android -p:AndroidSigningKeyStore=Platforms/Android/Keystore/fantasyfootball.keystore -p:AndroidSigningKeyAlias=key -p:AndroidSigningKeyPass="${{ secrets.KEYSTORE_PW }}" -p:AndroidSigningStorePass="${{ secrets.KEYSTORE_PW }}"
+    - name: Upload artifacts - generated aab/apk files
+      uses: actions/upload-artifact@v4
+      with:
+        path: |
+          ./**/*.aab
+          ./**/*.apk
